--- a/index.html
+++ b/index.html
@@ -9,30 +9,13 @@
 </head>
 <body class="font-sans text-white h-screen flex flex-col items-center justify-center m-0 p-0 overflow-hidden">
     <form id="form" class="w-full lg:max-w-3xl">
-        <input class="max-w-full w-full block border-none rounded-xl text-white p-4 mb-8 text-lg shadow-xl focus:outline-none placeholder:text-cyan-50" type="text" placeholder="Search a Github User" id="search">
+        <input class="max-w-full w-full block border-none rounded-xl text-white p-4 mb-8 text-lg shadow-xl focus:outline-none placeholder:text-cyan-50" type="text" value="MbiamouRichy" id="search">
     </form>
 
     <main id="main"class="w-full flex items-center justify-center">
-        <div class="w-full lg:max-w-3xl rounded-2xl shadow-xl flex flex-col items-center justify-between border-cyan-300 sm:flex-row p-2 md:p-12 my-0">
-            <div>
-                <img src="" alt="" class="avatar w-40 h-40">
-            </div>
-            <div class="text-white md:ml-8">
-                <h2 class="mt-0 mb-2 font-semibold text-2xl md:text-3xl">Richy</h2>
-                <p class="mb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem sunt, minus officiis dolores fuga corrupti illum commodi quasi atque distinctio veniam expedita enim nemo odio veritatis repellat, vel voluptates beatae.</p>
-                <ul class="flex list-none justify-between p-0 w-full lg:max-w-md mb-2">
-                    <li class="flex items-center">300 <strong class="text-sm ml-2">Followers</strong></li>
-                    <li class="flex items-center">100 <strong class="text-sm ml-2">Followers</strong></li>
-                    <li class="flex items-center">50 <strong class="text-sm ml-2">Followers</strong></li>
-                </ul>
-                <div id="repos">
-                    <a href="#"class="repos">Repo 1</a>
-                    <a href="#"class="repos">Repo 2</a>
-                    <a href="#"class="repos">Repo 3</a>
-                </div>
-            </div>
-        </div>
+        
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.6/axios.min.js" integrity="sha512-06NZg89vaTNvnFgFTqi/dJKFadQ6FIglD6Yg1HHWAUtVFFoXli9BZL4q4EO1UTKpOfCfW5ws2Z6gw49Swsilsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
