--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/output.css">
     <title>Search User Github</title>
 </head>
-<body class="font-sans text-white h-screen flex flex-col items-center justify-center m-0 p-0">
+<body class="font-sans text-white h-screen flex flex-col items-center justify-center m-0 p-0 overflow-x-hidden">
     <form id="form" class="w-full lg:max-w-3xl">
         <input class="max-w-full w-full block border-none rounded-xl text-white p-4 mb-8 text-lg shadow-xl focus:outline-none placeholder:text-cyan-50" type="text" value="MbiamouRichy" id="search">
     </form>
